--- a/svg-to-path-swift/index.html
+++ b/svg-to-path-swift/index.html
@@ -45,7 +45,18 @@
 	</table>
 	<br>
 	<br>
-	
-	<script type="text/javascript" src="./js/base.js"></script>
+	<p id="title">How To Use</p>
+	<br>
+	<p id="explanation">1. Create a SVG data.</p>
+	<img id="svg1" src="./images/sample_svg1.png">
+	<br><br>
+	<p id="explanation">2. Extract the viewBox data and the raw data of SVG.</p>
+	<img id="svg2" src="./images/sample_svg2.png">
+	<br><br>
+	<p id="explanation">3. Paste the data & Press the desired button.</p>
+	<img id="usecase" src="./images/sample_usecase.png">
+	<br><br>
+	<footer>©️Takuto Nakamura 2018</footer>
+	<script type="text/javascript" src="js/base.js"></script>
 </body>
 </html>
