--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Debug tools</title>
-</head>
-<body>
-    <a href="./go-to-url.html">Go to URL</a>
-</body>
+  </head>
+  <body>
+    <div style="display: flex;flex-direction: column;gap: 8px;">
+      <a href="./go-to-url.html">Go to URL</a>
+      <a href="./log-web-info.html">Log website info</a>
+      <a href="./open-new-tab.html">Open new tab</a>
+      <a href="./permission-query.html">Query permission</a>
+      <a href="./preview-batch-frame.html">Preview frame batch</a>
+      <a href="./url-search-params.html">View URL Search Params</a>
+      <a href="./svg-to-path-swift.html">SVG to Path Swift</a>
+      <a href="./camera-test.html">Camera test</a>
+    </div>
+  </body>
 </html>
