--- a/camera-test/index.html
+++ b/camera-test/index.html
@@ -50,6 +50,6 @@
     </div>
 
     <script src="js/main.js"></script>
-    <script src="/injectEruda.js"></script>
+    <script src="../injectEruda.js"></script>
   </body>
 </html>
