--- a/camera-test/index.html
+++ b/camera-test/index.html
@@ -42,7 +42,7 @@
           justify-content: center;
         "
       >
-        <video id="gum-local" autoplay muted playsinline style="width: 100%; transform: scale(-1, 1);"></video>
+        <video id="gum-local" muted playsinline style="width: 100%; transform: scale(-1, 1);"></video>
       </div>
       <button id="showVideo" style="position: absolute">Open camera</button>
 
