--- a/preview-batch-frame.html
+++ b/preview-batch-frame.html
@@ -3,103 +3,254 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Preview batch frame</title>
-
+    <title>Preview Batch Frame</title>
     <style>
+      body {
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          Helvetica, Arial, sans-serif;
+        margin: 0;
+        padding: 24px;
+        background-color: #f7f7f7;
+        color: #333;
+      }
+
+      .container {
+        max-width: 1200px;
+        margin: 0 auto;
+        background-color: #fff;
+        padding: 24px;
+        border-radius: 8px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      }
+
+      h1 {
+        font-size: 24px;
+        margin-block-start: 0;
+      }
+
+      .section {
+        margin-block-end: 24px;
+        padding-block-end: 24px;
+        border-bottom: 1px solid #eee;
+      }
+
+      .section:last-child {
+        border-bottom: none;
+        padding-block-end: 0;
+      }
+
+      .form-group {
+        margin-block-end: 16px;
+      }
+
+      label {
+        display: block;
+        margin-block-end: 8px;
+        font-weight: 500;
+      }
+
+      input[type="text"],
+      textarea {
+        width: 100%;
+        padding: 8px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+        font-family: inherit;
+      }
+
+      textarea {
+        min-height: 100px;
+        resize: vertical;
+      }
+
+      button {
+        padding: 10px 15px;
+        border: none;
+        border-radius: 4px;
+        background-color: #007bff;
+        color: white;
+        cursor: pointer;
+        font-size: 14px;
+        margin-inline-end: 8px;
+      }
+
+      button:hover {
+        background-color: #0056b3;
+      }
+
+      #image-preview {
+        margin-block-start: 16px;
+        max-width: 100%;
+        height: auto;
+        border: 1px solid #eee;
+        border-radius: 4px;
+      }
+
+      #batch-container {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        gap: 16px;
+        margin-block: 16px;
+      }
+
+      #batch-preview {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 16px;
+        margin-block-start: 16px;
+      }
+
       figure {
         margin: 0;
+        border: 1px solid #eee;
+        border-radius: 4px;
+        padding: 8px;
+        background-color: #fafafa;
+        width: 150px;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+      }
+
+      figure img {
+        max-width: 100%;
+        height: auto;
+        display: block;
+        border-radius: 4px;
       }
 
       figcaption {
         text-align: center;
         font-size: 13px;
+        margin-block-start: 8px;
+        font-weight: bold;
+      }
+
+      .metadata {
+        font-size: 12px;
+        color: #666;
+        margin-block-start: 4px;
+        word-wrap: break-word;
+        max-height: 60px;
+        overflow: hidden;
+        position: relative;
+      }
+
+      .metadata.expanded {
+        max-height: none;
+      }
+
+      .toggle-metadata {
+        font-size: 11px;
+        color: #007bff;
+        cursor: pointer;
+        text-align: center;
+        margin-block-start: 4px;
       }
     </style>
   </head>
   <body>
-    <div>
-      <input type="text" id="image-base64" />
-      <button type="button" id="preview-button">Preview</button>
-      <img id="image-preview" width="150" />
-    </div>
+    <div class="container">
+      <h1>Frame Previewer</h1>
 
-    <hr />
-
-    <div style="margin-block-start: 16px">
-      <button type="button" id="add-batch-button">Add batch</button>
-      <button type="button" id="preview-batch-button">Preview batch</button>
-      <div
-        id="batch-container"
-        style="
-          display: flex;
-          flex-direction: row;
-          flex-wrap: wrap;
-          gap: 8px;
-          margin-block: 8px;
-        "
-      >
-        <textarea data-batch-id="1"></textarea>
+      <div class="section">
+        <h2>Single Image Preview</h2>
+        <div class="form-group">
+          <label for="image-base64">Base64 String</label>
+          <input type="text" id="image-base64" />
+        </div>
+        <button type="button" id="preview-button">Preview</button>
+        <img id="image-preview" width="150" style="display: none" />
       </div>
 
-      <div
-        id="batch-preview"
-        style="display: flex; gap: 8px; flex-wrap: wrap"
-      ></div>
+      <div class="section">
+        <h2>Batch Preview</h2>
+        <button type="button" id="add-batch-button">Add Batch</button>
+        <button type="button" id="preview-batch-button">Preview Batch</button>
+        <div id="batch-container">
+          <textarea data-batch-id="1" placeholder="Paste JSON array of frames here..."></textarea>
+        </div>
+        <div id="batch-preview"></div>
+      </div>
     </div>
 
     <script type="text/javascript">
-      const addBatchButton = document.getElementById("add-batch-button");
-      const batchContainer = document.getElementById("batch-container");
-      addBatchButton.addEventListener("click", function () {
-        const batchId = document.querySelectorAll("[data-batch-id]").length + 1;
-        const textarea = document.createElement("textarea");
-        textarea.setAttribute("data-batch-id", batchId);
-        batchContainer.appendChild(textarea);
-      });
-    </script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const addBatchButton = document.getElementById("add-batch-button");
+        const batchContainer = document.getElementById("batch-container");
+        const previewButton = document.getElementById("preview-button");
+        const previewBatchButton = document.getElementById("preview-batch-button");
 
-    <script type="text/javascript">
-      const previewButton = document.getElementById("preview-button");
-      previewButton.addEventListener("click", function () {
-        var imageBase64 = document.getElementById("image-base64").value;
-        const url = `data:image/jpeg;base64,${imageBase64}`;
-        document.getElementById("image-preview").src = url;
-      });
+        addBatchButton.addEventListener("click", function () {
+          const batchId = document.querySelectorAll("[data-batch-id]").length + 1;
+          const textarea = document.createElement("textarea");
+          textarea.setAttribute("data-batch-id", batchId);
+          textarea.placeholder = `Paste JSON for batch ${batchId} here...`;
+          batchContainer.appendChild(textarea);
+        });
 
-      const previewBatchButton = document.getElementById(
-        "preview-batch-button"
-      );
-      previewBatchButton.addEventListener("click", function () {
-        // Clear previous batch
-        const batchPreview = document.getElementById("batch-preview");
-        batchPreview.innerHTML = "";
-
-        const frameBatches = document.querySelectorAll("[data-batch-id]");
-        batchPreview.innerHTML = "";
-
-        frameBatches.forEach((frameBatch) => {
-          try {
-            const frames = JSON.parse(frameBatch.value);
-            frames.forEach((frame) => {
-              const figure = document.createElement("figure");
-              const figcaption = document.createElement("figcaption");
-              figcaption.innerText = frame.index;
-
-              const url = `data:image/jpeg;base64,${frame.base64}`;
-              const img = document.createElement("img");
-              img.src = url;
-              img.title = frame.metadata;
-              img.width = 150;
-
-              figure.appendChild(img);
-              figure.appendChild(figcaption);
-
-              batchPreview.appendChild(figure);
-            });
-          } catch (error) {
-            console.error(error);
-            return;
+        previewButton.addEventListener("click", function () {
+          const imageBase64 = document.getElementById("image-base64").value;
+          const imagePreview = document.getElementById("image-preview");
+          if (imageBase64) {
+            const url = `data:image/jpeg;base64,${imageBase64}`;
+            imagePreview.src = url;
+            imagePreview.style.display = "block";
           }
+        });
+
+        previewBatchButton.addEventListener("click", function () {
+          const batchPreview = document.getElementById("batch-preview");
+          batchPreview.innerHTML = ""; // Clear previous batch
+
+          const frameBatches = document.querySelectorAll("[data-batch-id]");
+
+          frameBatches.forEach((frameBatch) => {
+            if (!frameBatch.value) return;
+            try {
+              const frames = JSON.parse(frameBatch.value);
+              if (!Array.isArray(frames)) {
+                console.error("Parsed data is not an array:", frames);
+                return;
+              }
+
+              frames.forEach((frame) => {
+                const figure = document.createElement("figure");
+
+                const img = document.createElement("img");
+                img.src = `data:image/jpeg;base64,${frame.base64}`;
+                img.width = 150;
+
+                const figcaption = document.createElement("figcaption");
+                figcaption.innerText = `Index: ${frame.index}`;
+
+                const metadataDiv = document.createElement("div");
+                metadataDiv.className = "metadata";
+                metadataDiv.innerText = frame.metadata;
+
+                figure.appendChild(img);
+                figure.appendChild(figcaption);
+                figure.appendChild(metadataDiv);
+
+                // Add toggle button if metadata is long
+                if (metadataDiv.scrollHeight > metadataDiv.clientHeight) {
+                  const toggle = document.createElement("div");
+                  toggle.className = "toggle-metadata";
+                  toggle.innerText = "Show more";
+                  toggle.addEventListener("click", function () {
+                    metadataDiv.classList.toggle("expanded");
+                    toggle.innerText = metadataDiv.classList.contains("expanded")
+                      ? "Show less"
+                      : "Show more";
+                  });
+                  figure.appendChild(toggle);
+                }
+
+                batchPreview.appendChild(figure);
+              });
+            } catch (error) {
+              console.error("Error parsing JSON from a batch:", error);
+            }
+          });
         });
       });
     </script>
