Add open new tab with anchor

--- a/open-new-tab.html
+++ b/open-new-tab.html
@@ -11,6 +11,10 @@
     <br />
     <button onclick="createElementAndOpenNewTab()">Open new tab with create new element</button>
 
+    <br />
+    <br />
+    <a href="https://google.com" target="_blank">Open new tab with anchor tag</a>
+
     <script>
       async function openNewTab() {
         window.open("https://google.com", "_blank");
