--- a/open-new-tab.html
+++ b/open-new-tab.html
@@ -22,7 +22,7 @@
 
       async function createElementAndOpenNewTab() {
         const a = document.createElement("a");
-        a.href = "https://google.com";
+        a.href = "https://tv-dj-web-ph-testing.trustingsocial.com/07b43db5-6a7d-4d9f-8ee2-0971a8a59965";
         a.target = "_blank";
         a.click();
       }
