--- a/open-new-tab.html
+++ b/open-new-tab.html
@@ -13,7 +13,7 @@
 
     <br />
     <br />
-    <a href="https://google.com" target="_blank">Open new tab with anchor tag</a>
+    <a href="https://tv-dj-web-ph-testing.trustingsocial.com/07b43db5-6a7d-4d9f-8ee2-0971a8a59965" target="_blank">Open new tab with anchor tag</a>
 
     <script>
       async function openNewTab() {
