--- a/open-new-tab.html
+++ b/open-new-tab.html
@@ -16,6 +16,8 @@
     <a href="https://tv-dj-web-ph-testing.trustingsocial.com/07b43db5-6a7d-4d9f-8ee2-0971a8a59965" target="_blank">Open new tab with anchor tag</a>
     <br />
     <a href="googlechrome://tv-dj-web-ph-testing.trustingsocial.com/07b43db5-6a7d-4d9f-8ee2-0971a8a59965" target="_blank">Open new tab with anchor tag with Google Chrome</a>
+    <br />
+    <a href="com-apple-mobilesafari-tab:://tv-dj-web-ph-testing.trustingsocial.com/07b43db5-6a7d-4d9f-8ee2-0971a8a59965" target="_blank">Open new tab with anchor tag with Safari</a>
 
     <script>
       async function openNewTab() {
