Fix safari scheme

--- a/open-new-tab.html
+++ b/open-new-tab.html
@@ -28,7 +28,7 @@
     >
     <br />
     <a
-      href="com-apple-mobilesafari-tab:https//tv-dj-web-ph-testing.trustingsocial.com/07b43db5-6a7d-4d9f-8ee2-0971a8a59965"
+      href="com-apple-mobilesafari-tab:https://tv-dj-web-ph-testing.trustingsocial.com/07b43db5-6a7d-4d9f-8ee2-0971a8a59965"
       target="_blank"
       >Open new tab with anchor tag in Safari</a
     >
