--- a/open-new-tab.html
+++ b/open-new-tab.html
@@ -15,35 +15,72 @@
 
     <br />
     <br />
+    <h4>Android</h4>
     <a
-      href="https://tv-dj-web-ph-testing.trustingsocial.com/07b43db5-6a7d-4d9f-8ee2-0971a8a59965"
-      target="_blank"
-      >Open new tab with anchor tag</a
+      href="intent://example.com#Intent;scheme=https;package=com.android.chrome;S.browser_fallback_url=https%3A%2F%2Fexample.com;end"
+      >Chrome (stable)</a
     >
     <br />
     <a
-      href="googlechrome://tv-dj-web-ph-testing.trustingsocial.com/07b43db5-6a7d-4d9f-8ee2-0971a8a59965"
-      target="_blank"
-      >Open new tab with anchor tag in Google Chrome</a
+      href="intent://example.com#Intent;scheme=https;package=com.sec.android.app.sbrowser;S.browser_fallback_url=...;end"
+      >Samsung Internet</a
     >
     <br />
     <a
-      href="com-apple-mobilesafari-tab:https://tv-dj-web-ph-testing.trustingsocial.com/07b43db5-6a7d-4d9f-8ee2-0971a8a59965"
-      target="_blank"
-      >Open new tab with anchor tag in Safari</a
+      href="intent://example.com#Intent;scheme=https;package=org.mozilla.firefox;S.browser_fallback_url=...;end"
+      >Firefox</a
     >
     <br />
     <a
-      href="firefox://open-url?url=tv-dj-web-ph-testing.trustingsocial.com/07b43db5-6a7d-4d9f-8ee2-0971a8a59965"
-      target="_blank"
-      >Open new tab with anchor tag in Firefox</a
+      href="intent://example.com#Intent;scheme=https;package=com.microsoft.emmx;S.browser_fallback_url=...;end"
+      >Microsoft Edge</a
     >
     <br />
     <a
-      href="opera-https://tv-dj-web-ph-testing.trustingsocial.com/07b43db5-6a7d-4d9f-8ee2-0971a8a59965"
-      target="_blank"
-      >Open new tab with anchor tag in Opera</a
+      href="intent://example.com#Intent;scheme=https;package=com.opera.browser;S.browser_fallback_url=...;end"
+      >Opera</a
     >
+    <br />
+    <a
+      href="intent://example.com#Intent;scheme=https;package=com.opera.mini.native;S.browser_fallback_url=...;end"
+      >Opera Mini</a
+    >
+    <br />
+    <a
+      href="intent://example.com#Intent;scheme=https;package=com.brave.browser;S.browser_fallback_url=...;end"
+      >Brave</a
+    >
+    <br />
+    <a
+      href="intent://example.com#Intent;scheme=https;package=com.vivaldi.browser;S.browser_fallback_url=...;end"
+      >Vivaldi</a
+    >
+    <br />
+    <a
+      href="intent://example.com#Intent;scheme=https;package=com.duckduckgo.mobile.android;S.browser_fallback_url=...;end"
+      >DuckDuckGo</a
+    >
+    <br />
+    <a
+      href="intent://example.com#Intent;scheme=https;package=com.kiwibrowser.browser;S.browser_fallback_url=...;end"
+      >Kiwi</a
+    >
+    <br />
+
+    <h4>iOS</h4>
+    <!-- iOS Browsers -->
+    <a href="googlechromes://example.com">Chrome (iOS)</a>
+    <br />
+    <a href="firefox://open-url?url=https%3A%2F%2Fexample.com">Firefox (iOS)</a>
+    <br />
+    <a href="microsoft-edge-https://example.com">Microsoft Edge (iOS)</a>
+    <br />
+    <a href="brave://open-url?url=https%3A%2F%2Fexample.com">Brave (iOS)</a>
+    <br />
+    <a href="opera-https://example.com">Opera Touch / Opera (iOS)</a>
+    <br />
+    <a href="ddgQuickLink://https%3A%2F%2Fexample.com">DuckDuckGo (iOS)</a>
+    <br />
 
     <script>
       async function openNewTab() {
