Add target blank

--- a/open-new-tab.html
+++ b/open-new-tab.html
@@ -16,27 +16,27 @@
     <br />
     <br />
     <h4>Android</h4>
-    <a
+    <a target="_blank"
       href="intent://example.com#Intent;scheme=https;package=com.android.chrome;S.browser_fallback_url=https%3A%2F%2Fexample.com;end"
       >Chrome (stable)</a
     >
     <br />
-    <a
+    <a target="_blank"
       href="intent://example.com#Intent;scheme=https;package=com.sec.android.app.sbrowser;S.browser_fallback_url=...;end"
       >Samsung Internet</a
     >
     <br />
-    <a
+    <a target="_blank"
       href="intent://example.com#Intent;scheme=https;package=org.mozilla.firefox;S.browser_fallback_url=...;end"
       >Firefox</a
     >
     <br />
-    <a
+    <a target="_blank"
       href="intent://example.com#Intent;scheme=https;package=com.microsoft.emmx;S.browser_fallback_url=...;end"
       >Microsoft Edge</a
     >
     <br />
-    <a
+    <a target="_blank"
       href="intent://example.com#Intent;scheme=https;package=com.opera.browser;S.browser_fallback_url=...;end"
       >Opera</a
     >
@@ -46,22 +46,22 @@
       >Opera Mini</a
     >
     <br />
-    <a
+    <a target="_blank"
       href="intent://example.com#Intent;scheme=https;package=com.brave.browser;S.browser_fallback_url=...;end"
       >Brave</a
     >
     <br />
-    <a
+    <a target="_blank"
       href="intent://example.com#Intent;scheme=https;package=com.vivaldi.browser;S.browser_fallback_url=...;end"
       >Vivaldi</a
     >
     <br />
-    <a
+    <a target="_blank"
       href="intent://example.com#Intent;scheme=https;package=com.duckduckgo.mobile.android;S.browser_fallback_url=...;end"
       >DuckDuckGo</a
     >
     <br />
-    <a
+    <a target="_blank"
       href="intent://example.com#Intent;scheme=https;package=com.kiwibrowser.browser;S.browser_fallback_url=...;end"
       >Kiwi</a
     >
@@ -69,17 +69,17 @@
 
     <h4>iOS</h4>
     <!-- iOS Browsers -->
-    <a href="googlechromes://example.com">Chrome (iOS)</a>
+    <a target="_blank" href="googlechromes://example.com">Chrome (iOS)</a>
     <br />
-    <a href="firefox://open-url?url=https%3A%2F%2Fexample.com">Firefox (iOS)</a>
+    <a target="_blank" href="firefox://open-url?url=https%3A%2F%2Fexample.com">Firefox (iOS)</a>
     <br />
-    <a href="microsoft-edge-https://example.com">Microsoft Edge (iOS)</a>
+    <a target="_blank" href="microsoft-edge-https://example.com">Microsoft Edge (iOS)</a>
     <br />
-    <a href="brave://open-url?url=https%3A%2F%2Fexample.com">Brave (iOS)</a>
+    <a target="_blank" href="brave://open-url?url=https%3A%2F%2Fexample.com">Brave (iOS)</a>
     <br />
-    <a href="opera-https://example.com">Opera Touch / Opera (iOS)</a>
+    <a target="_blank" href="opera-https://example.com">Opera Touch / Opera (iOS)</a>
     <br />
-    <a href="ddgQuickLink://https%3A%2F%2Fexample.com">DuckDuckGo (iOS)</a>
+    <a target="_blank" href="ddgQuickLink://https%3A%2F%2Fexample.com">DuckDuckGo (iOS)</a>
     <br />
 
     <script>
