--- a/open-new-tab.html
+++ b/open-new-tab.html
@@ -22,47 +22,47 @@
     >
     <br />
     <a target="_blank"
-      href="intent://example.com#Intent;scheme=https;package=com.sec.android.app.sbrowser;S.browser_fallback_url=...;end"
+      href="intent://example.com#Intent;scheme=https;package=com.sec.android.app.sbrowser;S.browser_fallback_url=https%3A%2F%2Fexample.com;end"
       >Samsung Internet</a
     >
     <br />
     <a target="_blank"
-      href="intent://example.com#Intent;scheme=https;package=org.mozilla.firefox;S.browser_fallback_url=...;end"
+      href="intent://example.com#Intent;scheme=https;package=org.mozilla.firefox;S.browser_fallback_url=https%3A%2F%2Fexample.com;end"
       >Firefox</a
     >
     <br />
     <a target="_blank"
-      href="intent://example.com#Intent;scheme=https;package=com.microsoft.emmx;S.browser_fallback_url=...;end"
+      href="intent://example.com#Intent;scheme=https;package=com.microsoft.emmx;S.browser_fallback_url=https%3A%2F%2Fexample.com;end"
       >Microsoft Edge</a
     >
     <br />
     <a target="_blank"
-      href="intent://example.com#Intent;scheme=https;package=com.opera.browser;S.browser_fallback_url=...;end"
+      href="intent://example.com#Intent;scheme=https;package=com.opera.browser;S.browser_fallback_url=https%3A%2F%2Fexample.com;end"
       >Opera</a
     >
     <br />
     <a
-      href="intent://example.com#Intent;scheme=https;package=com.opera.mini.native;S.browser_fallback_url=...;end"
+      href="intent://example.com#Intent;scheme=https;package=com.opera.mini.native;S.browser_fallback_url=https%3A%2F%2Fexample.com;end"
       >Opera Mini</a
     >
     <br />
     <a target="_blank"
-      href="intent://example.com#Intent;scheme=https;package=com.brave.browser;S.browser_fallback_url=...;end"
+      href="intent://example.com#Intent;scheme=https;package=com.brave.browser;S.browser_fallback_url=https%3A%2F%2Fexample.com;end"
       >Brave</a
     >
     <br />
     <a target="_blank"
-      href="intent://example.com#Intent;scheme=https;package=com.vivaldi.browser;S.browser_fallback_url=...;end"
+      href="intent://example.com#Intent;scheme=https;package=com.vivaldi.browser;S.browser_fallback_url=https%3A%2F%2Fexample.com;end"
       >Vivaldi</a
     >
     <br />
     <a target="_blank"
-      href="intent://example.com#Intent;scheme=https;package=com.duckduckgo.mobile.android;S.browser_fallback_url=...;end"
+      href="intent://example.com#Intent;scheme=https;package=com.duckduckgo.mobile.android;S.browser_fallback_url=https%3A%2F%2Fexample.com;end"
       >DuckDuckGo</a
     >
     <br />
     <a target="_blank"
-      href="intent://example.com#Intent;scheme=https;package=com.kiwibrowser.browser;S.browser_fallback_url=...;end"
+      href="intent://example.com#Intent;scheme=https;package=com.kiwibrowser.browser;S.browser_fallback_url=https%3A%2F%2Fexample.com;end"
       >Kiwi</a
     >
     <br />
