Add HeyTap browser

--- a/open-new-tab.html
+++ b/open-new-tab.html
@@ -66,6 +66,11 @@
       >Kiwi</a
     >
     <br />
+    <a target="_blank"
+      href="intent://example.com#Intent;scheme=https;package=com.heytap.browser;S.browser_fallback_url=https%3A%2F%2Fexample.com;end"
+      >HeyTap Browser</a
+    >
+    <br />
 
     <h4>iOS</h4>
     <!-- iOS Browsers -->
