--- a/open-new-tab.html
+++ b/open-new-tab.html
@@ -86,6 +86,8 @@
     <br />
     <a target="_blank" href="ddgQuickLink://https%3A%2F%2Fexample.com">DuckDuckGo (iOS)</a>
     <br />
+    <a target="_blank" href="x-safari-https://example.com">Safari (iOS)</a>
+    <br />
 
     <script>
       async function openNewTab() {
