--- a/open-new-tab.html
+++ b/open-new-tab.html
@@ -82,7 +82,7 @@
     <br />
     <a target="_blank" href="brave://open-url?url=https%3A%2F%2Fexample.com">Brave (iOS)</a>
     <br />
-    <a target="_blank" href="opera-https://example.com">Opera Touch / Opera (iOS)</a>
+    <a target="_blank" href="touch-https://example.com">Opera Touch / Opera (iOS)</a>
     <br />
     <a target="_blank" href="ddgQuickLink://https%3A%2F%2Fexample.com">DuckDuckGo (iOS)</a>
     <br />
