--- a/open-new-tab.html
+++ b/open-new-tab.html
@@ -32,7 +32,7 @@
     >
     <br />
     <a target="_blank"
-      href="intent://example.com#Intent;scheme=https;package=com.microsoft.emmx;S.browser_fallback_url=https%3A%2F%2Fexample.com;end"
+      href="microsoft-edge:https://example.com"
       >Microsoft Edge</a
     >
     <br />
