--- a/open-new-tab.html
+++ b/open-new-tab.html
@@ -17,7 +17,7 @@
     <br />
     <h4>Android</h4>
     <a target="_blank"
-      href="googlechromes://example.com"
+      href="intent://example.com#Intent;scheme=https;package=com.android.chrome;S.browser_fallback_url=https%3A%2F%2Fexample.com;end"
       >Chrome (stable)</a
     >
     <br />
@@ -27,7 +27,7 @@
     >
     <br />
     <a target="_blank"
-      href="firefox://open-url?url=https%3A%2F%2Fexample.com"
+      href="intent://example.com#Intent;scheme=https;package=org.mozilla.firefox;S.browser_fallback_url=https%3A%2F%2Fexample.com;end"
       >Firefox</a
     >
     <br />
@@ -47,7 +47,7 @@
     >
     <br />
     <a target="_blank"
-      href="brave://open-url?url=https%3A%2F%2Fexample.com"
+      href="intent://example.com#Intent;scheme=https;package=com.brave.browser;S.browser_fallback_url=https%3A%2F%2Fexample.com;end"
       >Brave</a
     >
     <br />
