--- a/open-new-tab.html
+++ b/open-new-tab.html
@@ -6,15 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <button onclick="openNewTab()">Open new tab</button>
-    <br />
-    <br />
-    <button onclick="createElementAndOpenNewTab()">
-      Open new tab with create new element
-    </button>
-
-    <br />
-    <br />
     <h4>Android</h4>
     <a target="_blank"
       href="intent://example.com#Intent;scheme=https;package=com.android.chrome;S.browser_fallback_url=https%3A%2F%2Fexample.com;end"
@@ -75,17 +66,10 @@
     <br />
 
     <script>
-      async function openNewTab() {
-        window.open("https://google.com", "_blank");
-      }
-
-      async function createElementAndOpenNewTab() {
-        const a = document.createElement("a");
-        a.href =
-          "https://tv-dj-web-ph-testing.trustingsocial.com/07b43db5-6a7d-4d9f-8ee2-0971a8a59965";
-        a.target = "_blank";
-        a.click();
-      }
+      const link = document.createElement('a');
+      link.href = "x-safari-https://example.com";
+      link.target = "_blank";
+      link.click();
     </script>
   </body>
 </html>
