Test change location

--- a/open-new-tab.html
+++ b/open-new-tab.html
@@ -69,7 +69,7 @@
       const link = document.createElement('a');
       link.href = "x-safari-https://example.com";
       link.target = "_blank";
-      link.click();
+      window.location.href = "x-safari-https://example.com";
     </script>
   </body>
 </html>
