--- a/open-new-tab.html
+++ b/open-new-tab.html
@@ -81,7 +81,7 @@
     <a target="_blank" href="x-safari-https://example.com">Safari (iOS)</a>
     <br />
 
-    <script>
+    <!-- <script>
       const link = document.createElement("a");
       link.href = "x-safari-https://example.com";
       link.target = "_blank";
@@ -89,6 +89,6 @@
       document.body.appendChild(link);
       link.click();
       document.body.removeChild(link);
-    </script>
+    </script> -->
   </body>
 </html>
