--- a/open-new-tab.html
+++ b/open-new-tab.html
@@ -54,6 +54,9 @@
     >
     <br />
 
+    <a target="_blank" href="intent:example.com#Intent;end">Any browser</a>
+    <br />
+
     <h4>iOS</h4>
     <!-- iOS Browsers -->
     <a target="_blank" href="googlechromes://example.com">Chrome (iOS)</a>
