--- a/open-new-tab.html
+++ b/open-new-tab.html
@@ -54,7 +54,7 @@
     >
     <br />
 
-    <a target="_blank" href="intent:example.com#Intent;end">Any browser</a>
+    <a target="_blank" href="intent://example.com#Intent;end">Any browser</a>
     <br />
 
     <h4>iOS</h4>
